<resources>
    <string name="app_name">MyClass</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="action_about">Sobre o MyClass</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nao_possui_conta">Não possui conta?</string>
    <string name="entrar_login">Entrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="cancelar">Cancelar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="email_senha_incorretos">Email e/ou senha incorretos</string>
    <string name="informe_todos_campos">Por favor, informe todos os campos</string>
    <string name="email_ja_existe">Email informado já está em uso</string>
    <string name="selecione_dia_da_semana">Selecione o dia da semana</string>
    <string name="salvar">Salvar</string>
    <string name="horario_incluido_sucesso">Horário incluído com sucesso</string>
    <string name="horario_alterado_sucesso">Horário alterado com sucesso</string>
    <string name="erro_inesperado">Erro inesperado, tente mais tarde!</string>
    <string name="nome_da_disciplina">Nome da disciplina</string>
    <string name="local_da_aula">Local da aula</string>
    <string name="inicio_da_aula">Início da aula</string>
    <string name="final_da_aula">Final da aula</string>
    <string name="selecione_sala_de_aula">Selecione a sala de aula</string>
    <string name="digite_uma_senha">Digite uma senha</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="nome_do_professor">Nome do professor</string>
    <string name="professor_incluido">Professor incluído com sucesso!</string>
    <string name="escolha_dia_semana">Por favor, escolha o dia da semana</string>
    <string name="necessario_nome_professor">Necessário nome do Professor</string>
    <string name="preencha_campos">Preencha os campos!</string>
    <string name="professor">Professor</string>
    <string name="disciplina">Disciplina</string>
    <string name="hora_inicio">Hora início</string>
    <string name="hora_final">Hora final</string>
    <string name="dia_da_semana">Dia da Semana</string>
    <string name="campo_obrigatorio">Campo obrigatório!</string>
    <string name="cadastrar_professor">Cadastrar professor</string>
    <string name="title_activity_settings_my_class">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_list_duration_schedule_labels">
        <item>30 min</item>
        <item>40 min</item>
        <item>50 min</item>
        <item>60 min</item>
        <item>100 min</item>
    </string-array>
    <string-array name="pref_list_duration_schedule_values">
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>100</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
