<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="14dp"
    android:layout_marginRight="14dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="8dp"
    android:id="@+id/row_text_date_description">

    <TextView
        android:id="@+id/txt_week_day_description"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:paddingLeft="16dp"
        android:paddingRight="0dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/dia_da_semana"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"/>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/table_schedule_header"
        android:paddingTop="8dp"
        android:layout_below="@id/txt_week_day_description"
        style="@style/mDefaultTableSchedule"
        android:paddingLeft="14dp">

        <TextView
            android:id="@+id/subject_name_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_da_disciplina"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/text_big"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/teacher_name_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subject_name_header"
            android:layout_marginTop="5dp"
            android:text="@string/nome_do_professor" />

        <TextView
            android:id="@+id/room_name_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_da_aula"
            android:layout_below="@id/teacher_name_header"
            android:layout_marginTop="16dp"/>

        <RelativeLayout
            android:id="@+id/layout_agroup_times_header"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/teacher_name_header"
            android:padding="3dp"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/time_initial_header"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/hora_inicio"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:elevation="2dp"
                android:textStyle="bold"
                android:textAlignment="center"
                style="@style/mBackgroundTimeSchedule"
                />

            <TextView
                android:id="@+id/time_final_header"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/hora_final"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:elevation="2dp"
                android:textStyle="bold"
                android:textAlignment="center"
                style="@style/mBackgroundTimeSchedule"
                android:layout_toRightOf="@id/time_initial_header"
                />
        </RelativeLayout>




    </RelativeLayout>

</RelativeLayout>